# wgpu-graft

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  NOTICE  README.md  rust-toolchain.toml
demo-raw-gl/: Cargo.toml  README.md
demo-raw-gl/src/: main.rs
demo-servo-bevy/: Cargo.toml  README.md
demo-servo-bevy/src/: main.rs
demo-servo-blitz/: Cargo.toml  README.md
demo-servo-blitz/src/: main.rs
demo-servo-egui/: Cargo.toml  README.md  build.rs
demo-servo-egui/src/: keyutils.rs  main.rs
demo-servo-gpui/: Cargo.toml  README.md  build.rs
demo-servo-gpui/src/: keyutils.rs  main.rs
demo-servo-iced/: Cargo.toml  README.md
demo-servo-iced/src/: keyutils.rs  main.rs
demo-servo-slint/: Cargo.toml  README.md
demo-servo-slint/src/: main.rs
demo-servo-winit/: Cargo.toml  README.md
demo-servo-winit/src/: main.rs
demo-servo-xilem/: Cargo.toml  README.md
demo-servo-xilem/fixtures/: animated.html
demo-servo-xilem/src/: keyutils.rs  main.rs
demo-support/: Cargo.toml
demo-support/src/: lib.rs
docs/: testing.md  (+6 more)
grafting/: Cargo.toml  README.md  build.rs
grafting/src/: dx12_shared_texture.rs  error.rs  lib.rs  metal_texture_ref.rs  sync_dx12.rs  sync_vulkan.rs  vulkan_dmabuf.rs
grafting/src/raw_gl/: producer.rs  texture_normalizer.rs  windows.rs
grafting/src/surfman_gl/: adapter.rs  linux.rs  mod.rs  surfman_frame_context.rs  windows.rs  windows_dx12_shared.rs
grafting/tests/: dmabuf_roundtrip.rs
patches/glass-gpui/: .gitignore  Cargo.toml  README.md
patches/glass-gpui/.cargo/: config.toml
patches/glass-gpui/.github/: CODEOWNERS
patches/glass-gpui/.github/DISCUSSION_TEMPLATE/: feature-requests.yml
patches/glass-gpui/.github/ISSUE_TEMPLATE/: 10_bug_report.yml  11_crash_report.yml  config.yml
patches/glass-gpui/.github/workflows/: assign-reviewers.yml
patches/glass-gpui/crates/collections/src/: vecmap.rs  vecmap_tests.rs
patches/glass-gpui/crates/gpui/: Cargo.toml  build.rs
patches/glass-gpui/crates/gpui/src/: app.rs  assets.rs  executor.rs  gpui.rs  input.rs  interactive.rs  key_dispatch.rs  platform.rs  platform_scheduler.rs  profiler.rs  queue.rs  scene.rs  style.rs  subscription.rs  svg_renderer.rs  taffy.rs  text_system.rs  window.rs
patches/glass-gpui/crates/gpui/src/app/: async_context.rs  entity_map.rs  headless_app_context.rs  test_context.rs  visual_test_context.rs
patches/glass-gpui/crates/gpui/src/composite_hosts/: mod.rs
patches/glass-gpui/crates/gpui/src/elements/: deferred.rs  div.rs  img.rs  list.rs
patches/glass-gpui/crates/gpui/src/hosted_views/: mod.rs
patches/glass-gpui/crates/gpui/src/platform/: keystroke.rs  layer_shell.rs  scap_screen_capture.rs  visual_test.rs
patches/glass-gpui/crates/gpui/src/presentations/: mod.rs
patches/glass-gpui/crates/gpui/src/text_system/: line.rs
patches/glass-gpui/crates/gpui_apple/: Cargo.toml
patches/glass-gpui/crates/gpui_apple/src/: lib.rs
patches/glass-gpui/crates/gpui_apple/src/composite_hosts/: mod.rs
patches/glass-gpui/crates/gpui_apple/src/hosted_views/: mod.rs
patches/glass-gpui/crates/gpui_apple/src/objc/: class.rs  ivar.rs  memory.rs  mod.rs  strings.rs
patches/glass-gpui/crates/gpui_apple/src/presentations/: mod.rs
patches/glass-gpui/crates/gpui_apple/src/support/: attach.rs  callbacks.rs  lifetime.rs  mod.rs
patches/glass-gpui/crates/gpui_examples/: Cargo.toml
patches/glass-gpui/crates/gpui_examples/examples/: input.rs  list_example.rs
patches/glass-gpui/crates/gpui_examples/src/: ios.rs  lib.rs  web.rs
patches/glass-gpui/crates/gpui_ios/: Cargo.toml
patches/glass-gpui/crates/gpui_ios/src/: app_bridge.rs  dispatcher.rs  display.rs  display_link.rs  drag_drop.rs  events.rs  gestures.rs  keyboard.rs  lib.rs  lifecycle.rs  open_type.rs  platform.rs  text_system.rs  view.rs  window.rs
patches/glass-gpui/crates/gpui_ios/src/text_input/: backed_view.rs  events.rs  mod.rs  session.rs  traits.rs
patches/glass-gpui/crates/gpui_linux/src/linux/: platform.rs
patches/glass-gpui/crates/gpui_macos/: Cargo.toml
patches/glass-gpui/crates/gpui_macos/src/: dispatcher.rs  events.rs  gpui_surface.rs  lib.rs  platform.rs  text_system.rs  window.rs
patches/glass-gpui/crates/gpui_macros/: Cargo.toml
patches/glass-gpui/crates/gpui_macros/src/: gpui_macros.rs  property_test.rs
patches/glass-gpui/crates/gpui_metal/: Cargo.toml  build.rs
patches/glass-gpui/crates/gpui_metal/src/: atlas.rs  gpui_metal.rs  renderer.rs  shaders.metal
patches/glass-gpui/crates/gpui_platform/: Cargo.toml
patches/glass-gpui/crates/gpui_platform/src/: gpui_platform.rs
patches/glass-gpui/crates/gpui_web/src/: events.rs  gpui_web.rs  platform.rs  window.rs  window_environment.rs
patches/glass-gpui/crates/gpui_wgpu/: Cargo.toml
patches/glass-gpui/crates/gpui_wgpu/src/: wgpu_renderer.rs
patches/glass-gpui/crates/gpui_windows/: Cargo.toml
patches/glass-gpui/crates/gpui_windows/src/: destination_list.rs  dispatcher.rs  events.rs  keyboard.rs  shaders.hlsl
patches/glass-gpui/crates/http_client/src/: github_download.rs
patches/glass-gpui/crates/refineable/derive_refineable/: Cargo.toml
patches/glass-gpui/crates/scheduler/: Cargo.toml
patches/glass-gpui/crates/scheduler/src/: executor.rs  scheduler.rs  test_scheduler.rs
patches/glass-gpui/crates/sum_tree/: Cargo.toml
patches/glass-gpui/crates/sum_tree/src/: sum_tree.rs
patches/glass-gpui/crates/util/: Cargo.toml
patches/glass-gpui/crates/util/src/: disambiguate.rs  markdown.rs  paths.rs  shell.rs  util.rs
patches/glass-gpui/hosts/: README.md
patches/glass-gpui/hosts/ios/: project.yml
patches/glass-gpui/hosts/ios/runner/: main.m
patches/glass-gpui/hosts/web/hello_web/: Cargo.toml  main.rs  trunk.toml
patches/glass-gpui/tooling/cargo-gpui/: Cargo.toml
patches/glass-gpui/tooling/cargo-gpui/src/: cli.rs  host.rs  ios.rs  main.rs
patches/taffy-0.9/: Cargo.toml
patches/yeslogic-fontconfig-sys/: Cargo.toml  build.rs
patches/yeslogic-fontconfig-sys/src/: lib.rs
servo-wgpu-interop-adapter/: Cargo.toml  README.md
servo-wgpu-interop-adapter/src/: lib.rs
(+41 files in other folders)
