[package]
name = "demo-raw-gl"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Minimal demo: raw GL rendering imported into a wgpu host via wgpu-native-texture-interop"

[dependencies]
wgpu = { version = "28.0.0", features = ["metal"] }
wgpu-native-texture-interop = { path = "../wgpu-native-texture-interop", default-features = false }
glow = "0.16.0"
glutin = "0.32.3"
glutin-winit = "0.5.0"
raw-window-handle = "0.6"
winit = "0.30.12"
pollster = "0.4.0"
