[package]
name = "demo-servo-gpui"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Demo embedding Servo in a GPUI application with URL bar and input forwarding"

[dependencies]
demo-support = { path = "../demo-support" }
euclid = "0.22.11"
# Pinned at 0.2.2 to match upstream gpui's version. The workspace's
# [patch.crates-io] entry redirects this to glass-hq/gpui — an actively-
# maintained fork of Zed's gpui that uses gpui_wgpu (wgpu 29) instead of
# blade, so wayland/x11 features no longer pull in a naga-25 build.
gpui = { version = "0.2.2", features = ["font-kit", "windows-manifest", "wayland", "x11"] }
# glass-hq factored platform construction out of gpui itself; gpui_platform
# wraps the per-OS Platform impls with a single `application()` helper. Both
# come from the vendored, Linux-fixed copy under patches/glass-gpui (see the
# workspace [patch.crates-io] notes). wayland + x11 enabled so gpui_linux's
# real window backends are compiled in.
gpui_platform = { path = "../patches/glass-gpui/crates/gpui_platform", features = ["wayland", "x11"] }
image = "0.25"
servo = { git = "https://github.com/servo/servo", branch = "release/v0.3" }
rustls = "0.23.37"
servo-wgpu-interop-adapter = { path = "../servo-wgpu-interop-adapter", features = ["servo"] }
smallvec = "1"
url = "2.5.7"
winit = "0.30.12"
