[package]
name = "demo-servo-iced"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Demo embedding Servo in an iced UI with URL bar and input forwarding"

[dependencies]
euclid = "0.22.11"
iced = { version = "0.14", features = ["image", "tokio"] }
servo = "0.1.0"
rustls = "0.23.37"
servo-wgpu-interop-adapter = { path = "../servo-wgpu-interop-adapter", features = ["servo"] }
url = "2.5.7"
winit = "0.30.12"
