[package]
name = "demo-servo-xilem"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Demo embedding Servo in a Xilem UI via CPU texture readback"

[dependencies]
euclid = "0.22.11"
image = "0.25"
libservo = { git = "https://github.com/servo/servo", tag = "v0.0.6" }
masonry = "0.4.0"
masonry_winit = "0.4.0"
rustls = "0.23.37"
servo-wgpu-interop-adapter = { path = "../servo-wgpu-interop-adapter", features = ["servo"] }
tokio = { version = "1", features = ["sync"] }
url = "2.5.7"
winit = "0.30.12"
xilem = "0.4.0"
