[package]
name = "servo-wgpu-interop-adapter"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/mark-ik/wgpu-graft"
description = "Servo-specific offscreen rendering adapter built on wgpu-native-texture-interop"

[features]
default = []
servo = ["dep:servo"]

[dependencies]
euclid = "0.22.11"
gleam = "0.15.1"
glow = "0.16.0"
image = "0.25.8"
rustls = "0.23.37"
surfman = { version = "0.11.0", features = ["chains"] }
dpi = "0.1.2"
winit = "0.30.13"
wgpu = { version = "29.0.1", features = ["metal"] }
wgpu-native-texture-interop = { path = "../wgpu-native-texture-interop", version = "0.2.0" }
servo = { version = "0.1.0", optional = true }
