[package]
name = "servo-wgpu-interop-adapter"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/mark-ik/wgpu-graft"
description = "Servo-specific offscreen rendering adapter built on grafting"

[features]
default = ["wgpu-29"]
# Select the wgpu version to match the host; forwarded to grafting.
# `wgpu-29` takes precedence if both are enabled.
wgpu-29 = ["dep:wgpu_29", "grafting/wgpu-29"]
wgpu-28 = ["dep:wgpu_28", "grafting/wgpu-28"]
servo = ["dep:servo"]

[dependencies]
euclid = "0.22.11"
gleam = "0.15.1"
glow = "0.16.0"
image = "0.25.8"
rustls = "0.23.37"
surfman = { version = "0.11.0", features = ["chains"] }
dpi = "0.1.2"
winit = "0.30.13"
wgpu_29 = { package = "wgpu", version = "29.0.1", features = ["metal"], optional = true }
wgpu_28 = { package = "wgpu", version = "28.0.0", features = ["metal"], optional = true }
grafting = { path = "../grafting", version = "0.3.0", default-features = false, features = ["surfman"] }
servo = { version = "0.1.1", optional = true }
