[package]
edition = "2021"
rust-version = "1.77"
name = "yeslogic-fontconfig-sys"
version = "6.0.0"
authors = [
    "Austin Bonander <austin.bonander@gmail.com>",
    "The Servo Project Developers",
    "YesLogic Pty. Ltd. <info@yeslogic.com>",
]
links = "fontconfig"
description = "Raw bindings to Fontconfig without a vendored C library"
homepage = "https://github.com/yeslogic/fontconfig-rs"
documentation = "https://docs.rs/crate/yeslogic-fontconfig-sys"
license = "MIT"
repository = "https://github.com/yeslogic/fontconfig-rs"

[lib]
name = "fontconfig_sys"

[dependencies]
dlib = "0.5.0"
once_cell = "1.9.0"

[build-dependencies]
pkg-config = "0.3"

[features]
# Upstream `dlopen` toggles between root-level `extern` declarations and a
# runtime-loaded `Fc` struct. This patched crate emits BOTH unconditionally
# so consumers using either calling convention coexist under cargo feature
# unification. The feature is preserved for ABI compatibility with crates
# that toggle it (e.g. `fontique`); it is effectively a no-op here.
dlopen = []
