[package]
name = "gpui_apple"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "Apache-2.0"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
gpui.workspace = true

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
anyhow.workspace = true
block = "0.1"
cocoa.workspace = true
collections.workspace = true
core-foundation.workspace = true
ctor.workspace = true
dispatch2 = "0.3.1"
gpui_metal.workspace = true
objc.workspace = true
parking_lot.workspace = true
